--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -12,15 +12,15 @@
       </li>
       <!-- <span class="navspace"></span> -->
       <!-- !Products -->
-      <li class="nav-item dropdown pl-lg-2" *ngFor="let typeItem of allTypes, index as i">
+      <!-- <li class="nav-item dropdown pl-lg-2" *ngFor="let typeItem of allTypes, index as i">
           <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink{{i}}" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
             <h1 class="s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]" (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">{{typeItem.typeName}}</h1>
           </div>
-          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allTypes">
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allTypes"> -->
 
             <!-- !large screen dropdown -->
-            <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]"
+            <!-- <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', typeItem.prodTypeId, 0]"
             (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
               <h1>All {{typeItem.typeName}}s</h1>
             </a>
@@ -42,10 +42,10 @@
               (click)="updateCategoryStatus(category.categoryName)">
                 {{category.categoryName}}
               </a>
-            </div>
+            </div> -->
 
             <!-- !mobile dropdown -->
-            <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
+            <!-- <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
               <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="['/products', typeItem.prodTypeId, 0]"
               (click)="updateCategoryStatus('All '+ typeItem.typeName + 's')">
                 <h1>All {{typeItem.typeName}}s</h1>
@@ -68,40 +68,64 @@
             </a>
           </div>
         </li>
-        
+         -->
 
       <!--!Hire dropdown-->
-      <!-- <li class="nav-item dropdown">
+      <li class="nav-item dropdown">
         <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
           aria-haspopup="true" aria-expanded="false">
-          <h1 class="s2bold" routerLink='/hire'>Hire</h1>
+          <h1 class="s2bold" [routerLink]="['/products', 1, 0]" (click)="updateCategoryStatus('All Hires')">Hire</h1>
         </div>
-        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="allCategories"> -->
+        <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="hireCategories">
 
           <!-- !large screen dropdown -->
-          <!-- <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" routerLink='/hire'> <h1>All Products</h1></a>
-          <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block" href='http://luxedreameventhire.co.nz/hire'> All Products</a>
+          <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', 1, 0]"
+            (click)="updateCategoryStatus('All Hires')">
+            <h1>All Hires</h1>
+          </a>
+          <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block" href='http://luxedreameventhire.co.nz/products/1'
+            (click)="updateCategoryStatus('All Hires')">
+            All Hires
+          </a>
           <div *ngIf="isBrowser==true">
-            <a class="dropdown-item d-none d-md-block s2bold" *ngFor="let category of allCategories[1]"
-            [routerLink]="[ '/category/', category.categoryId ]"><h1>{{category.categoryName}}</h1></a>
+            <a class="dropdown-item d-none d-md-block s2bold" *ngFor="let category of hireCategories"
+              [routerLink]="[ '/products', 1, category.categoryId ]"
+              (click)="updateCategoryStatus(category.categoryName)">
+              <h1>{{category.categoryName}}</h1>
+            </a>
           </div>
           <div *ngIf="isBrowser==false">
-            <a class="dropdown-item d-none d-md-block" *ngFor="let category of allCategories[1]"
-            href = 'http://luxedreameventhire.co.nz/category/{{category.categoryId}}'>{{category.categoryName}}</a>
-          </div> -->
+            <a class="dropdown-item d-none d-md-block" *ngFor="let category of hireCategories"
+              href = 'http://luxedreameventhire.co.nz/products/1/{{category.categoryId}}'
+              (click)="updateCategoryStatus(category.categoryName)">
+              {{category.categoryName}}
+            </a>
+          </div>
 
           <!-- !mobile dropdown -->
-          <!-- <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
-            <a  class="s2bold" *ngIf="isBrowser==true" routerLink='/hire'><h1>All Products</h1></a>
-            <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/hire'>All Products</a>
+          <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
+            <a  class="s2bold" *ngIf="isBrowser==true" [routerLink]="['/products', 1, 0]"
+              (click)="updateCategoryStatus('All Hires')">
+              <h1>All Hires</h1>
+            </a>
+            <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/1'
+              (click)="updateCategoryStatus('All Hires')">
+              All Hires
+            </a>
           </a>
-          <a class="dropdown-item d-block d-md-none s2bold" *ngFor="let category of allCategories[1]" data-toggle="collapse"
+          <a class="dropdown-item d-block d-md-none s2bold" *ngFor="let category of hireCategories" data-toggle="collapse"
             data-target=".navbar-collapse">
-            <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="[ '/category/', category.categoryId ]"><h1>{{category.categoryName}}</h1></a>
-            <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/category/{{category.categoryId}}'>{{category.categoryName}}</a>
+            <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="[ '/products', 1, category.categoryId ]"
+              (click)="updateCategoryStatus(category.categoryName)">
+              <h1>{{category.categoryName}}</h1>
+            </a>
+            <a *ngIf="isBrowser==false" href = 'http://luxedreameventhire.co.nz/products/1/{{category.categoryId}}'
+              (click)="updateCategoryStatus(category.categoryName)">
+              {{category.categoryName}}
+            </a>
           </a>
         </div>
-      </li> -->
+      </li>
 
       <!-- <span class="navspace"></span> -->
       <!--!Party services-->
@@ -113,7 +137,65 @@
           <h1 class="s2bold">Party Services</h1>
         </a>
       </li>
-      <!-- <span class="navspace"></span> -->
+
+      <!-- *duplicate hire start -->
+      <li class="nav-item dropdown">
+          <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            <h1 class="s2bold" [routerLink]="['/products', 1, 0]" (click)="updateCategoryStatus('All Hires')">Hire</h1>
+          </div>
+          <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink" *ngIf="hireCategories">
+  
+            <!-- !large screen dropdown -->
+            <a *ngIf="isBrowser==true" class="dropdown-item d-none d-md-block s2bold" [routerLink]="['/products', 1, 0]"
+              (click)="updateCategoryStatus('All Hires')">
+              <h1>All Hires</h1>
+            </a>
+            <a *ngIf="isBrowser==false" class="dropdown-item d-none d-md-block" href='http://luxedreameventhire.co.nz/products/1'
+              (click)="updateCategoryStatus('All Hires')">
+              All Hires
+            </a>
+            <div *ngIf="isBrowser==true">
+              <a class="dropdown-item d-none d-md-block s2bold" *ngFor="let category of hireCategories"
+                [routerLink]="[ '/products', 1, category.categoryId ]"
+                (click)="updateCategoryStatus(category.categoryName)">
+                <h1>{{category.categoryName}}</h1>
+              </a>
+            </div>
+            <div *ngIf="isBrowser==false">
+              <a class="dropdown-item d-none d-md-block" *ngFor="let category of hireCategories"
+                href = 'http://luxedreameventhire.co.nz/products/1/{{category.categoryId}}'
+                (click)="updateCategoryStatus(category.categoryName)">
+                {{category.categoryName}}
+              </a>
+            </div>
+  
+            <!-- !mobile dropdown -->
+            <a class="dropdown-item d-block d-md-none" data-toggle="collapse" data-target=".navbar-collapse">
+              <a  class="s2bold" *ngIf="isBrowser==true" [routerLink]="['/products', 1, 0]"
+                (click)="updateCategoryStatus('All Hires')">
+                <h1>All Hires</h1>
+              </a>
+              <a *ngIf="isBrowser==false" href='http://luxedreameventhire.co.nz/products/1'
+                (click)="updateCategoryStatus('All Hires')">
+                All Hires
+              </a>
+            </a>
+            <a class="dropdown-item d-block d-md-none s2bold" *ngFor="let category of hireCategories" data-toggle="collapse"
+              data-target=".navbar-collapse">
+              <a class="s2bold" *ngIf="isBrowser==true" [routerLink]="[ '/products', 1, category.categoryId ]"
+                (click)="updateCategoryStatus(category.categoryName)">
+                <h1>{{category.categoryName}}</h1>
+              </a>
+              <a *ngIf="isBrowser==false" href = 'http://luxedreameventhire.co.nz/products/1/{{category.categoryId}}'
+                (click)="updateCategoryStatus(category.categoryName)">
+                {{category.categoryName}}
+              </a>
+            </a>
+          </div>
+        </li>
+      <!-- *duplicate hire end -->
+
     </ul>
   </div>
   
