--- a/src/app/fcomponents/admin/admin-products/admin-products.component.html
+++ b/src/app/fcomponents/admin/admin-products/admin-products.component.html
@@ -14,7 +14,7 @@
         </button>
       </div>
       <div class="pt-2 col">
-        <input type="text" id="productSearch" placeholder="search the name of products here" [formControl]="searchField">
+        <input type="text" id="productSearch" placeholder="search the title of products here" [formControl]="searchField">
       </div>
     </div>
     <table class="table">
