--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -133,7 +133,7 @@
       <li class="nav-item dropdown">
           <div class="nav-link dropdown-toggle s2bold" id="navbarDropdownMenuLink2" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            <h1 class="s2bold" [routerLink]="['/services', 2, 0]" (click)="updateCategoryStatus('All Services')">Party Services</h1>
+            <h1 class="s2bold" [routerLink]="['/services', 2, 0]" (click)="updateCategoryStatus('All Services')">Event Services</h1>
           </div>
           <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink2" *ngIf="serviceCategories">
   
