--- a/src/app/fcomponents/products/productList/productList.component.html
+++ b/src/app/fcomponents/products/productList/productList.component.html
@@ -2,11 +2,13 @@
   <div class="px-0 px-md-5 mx-2">
 
     <!-- title -->
-    <div class="row">
-        <div class="col-12 my-2 my-md-5 l1 text-center" *ngIf="typeName === 'products'">  Our {{typeTitle}}s</div>
-        <div class="col-12 my-2 my-md-5 l1 text-center" *ngIf="typeName === 'services'">  Our Services</div>
-        <div class="col-12 my-2 my-md-5 l1 text-center" *ngIf="typeName === 'package'">  Our Packages</div>
-    </div>
+      <br>
+        <div style="text-align: center;" class="l1" *ngIf="typeName === 'products'">  Our {{typeTitle}}s</div>
+        <div style="text-align: center;" class="my-2 l1 " *ngIf="typeName === 'services'">Our Services 
+          <br>
+          <span class="s3">All wedding decorations and floral arrangememt are originally designed by Luxedream Floral Studio.</span>
+        </div><br>
+        <div style="text-align: center;" class="l1" *ngIf="typeName === 'package'">  Our Packages</div>
 
     <!-- categories and search -->
     <div *ngIf="typeName !== 'package' " class="row justify-content-center" #categorySelection>
