update footer item

--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -40,7 +40,7 @@
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50"><a routerLink="/hire">Hire</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/services">Event services</a>
           </li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/packages">Event packages</a>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/packages">Party packages</a>
           </li>
         </ul>
       </div>
