--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -33,6 +33,7 @@
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/faq">FAQ</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/checkout">Shopping Cart</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/admin">Login</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a  (click)="openDialog()">Sign Up</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
