--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -39,11 +39,11 @@
               <img #prodImage src="{{baseImageLink}}{{img.url}}" class="d-block autofix">
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-prev" *ngIf="prodMediaUrl.length > 1" href="#carouselExampleControls" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a #rightControl class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <a #rightControl class="carousel-control-next" *ngIf="prodMediaUrl.length > 1" href="#carouselExampleControls" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
