--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -12,7 +12,7 @@ ul li a:hover{
 }
 .imgBlocks{
     width:100%;
-    height:100%;
+    max-height: 100%;
 }
 .fab.fa-facebook-square:hover{
     color: white;
