--- a/src/app/fcomponents/pages/contactUs/contactUs.component.html
+++ b/src/app/fcomponents/pages/contactUs/contactUs.component.html
@@ -27,7 +27,7 @@
       </div>
       <div class="row py-2">
         <div class="col-12 s2">
-          <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:20px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;luxedreameventhire@gmail.com
+          <img src="../../../../assets/images/gmailLogo.png" alt="" style="height:20px;width:26px;">&nbsp;&nbsp;&nbsp;&nbsp;info@luxedreameventhire.co.nz
         </div>
       </div>
     </div>
