--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -1,3 +1,9 @@
+<style>
+	a {
+		cursor: pointer;
+	}
+</style>
+
 <div class="bg-dark">
   <div class="container-fluid">
     <!-- follow us -->
@@ -32,7 +38,8 @@
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/contactUs">Contact</a> </li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/faq">FAQ</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/checkout">Shopping Cart</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/admin">Login</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/admin">Admin Login</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a (click)="loginDialog">Customer Login</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a  (click)="openDialog()">Sign Up</a></li>
         </ul>
       </div>
