--- a/src/styles.css
+++ b/src/styles.css
@@ -256,3 +256,6 @@ body{
 .btn.disabled, .btn:disabled{
   opacity: 0.3;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
