added form and validators for user registration

--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -40,7 +40,7 @@
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/checkout">Shopping Cart</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a routerLink="/admin">Admin Login</a></li>
           <li class="mt-2 text-decoration-underline text-white-50"><a (click)="loginDialog()">Customer Login</a></li>
-          <li class="mt-2 text-decoration-underline text-white-50"><a (click)="openDialog()">Sign Up</a></li>
+          <li class="mt-2 text-decoration-underline text-white-50"><a (click)="signupDialog()">Sign Up</a></li>
         </ul>
       </div>
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
