--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -1,26 +1,37 @@
-<div id="logowrap">
-<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px" height="100px"> 
-</div>
-<hr>
-<h1 mat-dialog-title style="text-align:center;">Sign Up</h1>
 <div class=wrap>
-<div mat-dialog-content>
-  <mat-form-field>
-    <input matInput placeholder="Username (Email address)" [formControl]="username" required>
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="Password" [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+  <div id="logowrap">
+    <img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px" height="100px">
+  </div>
+  <hr>
+  <h1 mat-dialog-title style="text-align:center;">Sign Up</h1>
+
+  <form [formGroup]="registrationForm">
+    <mat-dialog-content>
+    <mat-form-field>
+      <input matInput placeholder="Username (Email address)" formControlName="username" required>
+      <mat-error *ngIf="username.invalid">{{getErrorMessage()}}</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'" required>
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-  </mat-form-field>
-  <mat-form-field>
-    <input matInput placeholder="ReEnter Password" [type]="hide ? 'password' : 'text'">
-    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+      </button>
+    </mat-form-field>
+    <mat-form-field>
+      <input matInput placeholder="Re-enter Password" formControlName="passwordagain"[type]="hide ? 'password' : 'text'" required>
+      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide">
         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-    </button>
-  </mat-form-field>
-  
-</div>
+      </button>
+    </mat-form-field>
+    </mat-dialog-content>
+    <mat-dialog-actions>
+      <div id="ButtonsWrap">
+        <button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
+        <button mat-raised-button color="primary" type="submit" class="mx-2">Sign Up</button>
+      </div>
+    </mat-dialog-actions>
+  </form>
 
 </div>
