--- a/src/app/fcomponents/basic/user-dialog/userlogin-dialog/userlogin-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userlogin-dialog/userlogin-dialog.component.html
@@ -1,6 +1,6 @@
 <style>
 	#wrap {
-		width: 80%;
+		width: 100%;
 		margin: 0 auto;
 	}
 	#LogoWrap {
@@ -9,42 +9,67 @@
 		text-align: center;
 	}
 	#FormWrap {
+		width: 80%;
 		margin: 0 auto;
 		text-align: center;
 	}
 	#ButtonsWrap {
 		text-align: center;
+		margin-top: 10px;
 	}
-	mat-form-field, a {
+	.primaryButton {
+		background-color: #c48f45;
+		color: white;
+	}
+	mat-form-field	{
 		display: block;
+		margin-top: 10px;
+		margin-bottom: 10px;
+	}
+	a {
+		display: block;
+		cursor: pointer;
 	}
 </style>
 
+
+<!-- Log in form for users -->
 <div id="wrap">
 	<div id="LogoWrap">
-		<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px" height="100px">
+		<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px">
 		<hr>
 		<h5>Customer Login</h5>
 	</div>
 	
-	<div id="FormWrap" class="my-5">
-		<mat-form-field>
-			<input type="text" matInput placeholder="Your Email">
-		</mat-form-field>
+	<form [formGroup]="userLoginForm" (ngsubmit)="onsubmit()">
+		<div id="FormWrap">
+			<mat-dialog-content>
+				<mat-form-field>
+					<input matInput formControlName="email" placeholder="Your Email" required>
+					<mat-error *ngIf="email.invalid">{{ getEmailErrorMessage() }}</mat-error>
+				</mat-form-field>
+		
+				<mat-form-field>
+					<input matInput formControlName="passwd" [type]="hide? 'passwd' : 'text'" placeholder="Your Password">
+					<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+						<mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+					</button>
+					<mat-error *ngIf="passwd.invalid">{{ getPasswdErrorMessage() }}</mat-error>
+				</mat-form-field>
+			</mat-dialog-content>
+		</div>
 
-		<mat-form-field>
-			<input type="text" matInput [type]="hide? 'password' : 'text'" placeholder="Your Password">
-			<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-				<mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-			</button>
-		</mat-form-field>
-
-		<a href="" class="mt-2">I forgot my password</a>
-	</div>
-
-	<div id="ButtonsWrap">
-		<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-		<button mat-raised-button color="primary" type="submit" class="mx-2">Log in</button>
-	</div>
+		<div id="ButtonsWrap">
+			<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
+			<button mat-raised-button type="submit" class="primaryButton mx-2">Log in</button>
+			<a href="" class="my-3">I forgot my password</a>
+			<hr>
+		</div>
+	</form>
+		<div id="ButtonsWrap">
+			<p>Don't have an account?</p>
+			<button mat-raised-button (click)="signupDialog()" class="primaryButton">Sign up now!</button>
+		</div>
+		
 	
 </div>
