--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -1,37 +1,66 @@
+<style>
+	.wrap {
+		width: 80%;
+		margin: 0 auto;
+	}
+	.wrap>* {
+		width: 100%;
+	}
+	#logowrap {
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+	}
+	.mat-form-field {
+		display: block;
+	}
+	.primaryButton {
+		background-color: #c48f45;
+		color: white;
+	}
+	mat-form-field	{
+		display: block;
+		margin-bottom: 10px;
+	}
+</style>
+
+<!-- Sign up form for users -->
 <div class=wrap>
-  <div id="logowrap">
-    <img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px" height="100px">
-  </div>
-  <hr>
-  <h1 mat-dialog-title style="text-align:center;">Sign Up</h1>
+	<div id="logowrap">
+		<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="150px">
+	</div>
+	<hr>
+	<h1 mat-dialog-title style="text-align:center;">Sign Up</h1>
 
-  <form [formGroup]="registrationForm">
-    <mat-dialog-content>
-    <mat-form-field>
-      <input matInput placeholder="Username (Email address)" formControlName="username" required>
-      <mat-error *ngIf="username.invalid">{{getErrorMessage()}}</mat-error>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'" required>
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide">
-        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-    </mat-form-field>
-    <mat-form-field>
-      <input matInput placeholder="Re-enter Password" formControlName="passwordagain"[type]="hide ? 'password' : 'text'" required>
-      <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-        [attr.aria-pressed]="hide">
-        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-      </button>
-    </mat-form-field>
-    </mat-dialog-content>
-    <mat-dialog-actions>
-      <div id="ButtonsWrap">
-        <button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-        <button mat-raised-button color="primary" type="submit" class="mx-2">Sign Up</button>
-      </div>
-    </mat-dialog-actions>
-  </form>
+	<form [formGroup]="registrationForm">
+		<mat-dialog-content>
+			<mat-form-field>
+				<input matInput placeholder="Username (Email address)" formControlName="username" required>
+				<mat-error *ngIf="username.invalid">{{ getErrorMessage() }}</mat-error>
+			</mat-form-field>
+			<mat-form-field>
+				<input matInput placeholder="Password" formControlName="password" [type]="hide ? 'password' : 'text'"
+					required>
+				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+					[attr.aria-pressed]="hide">
+					<mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+				</button>
+			</mat-form-field>
+			<mat-form-field>
+				<input matInput placeholder="Re-enter Password" formControlName="passwordagain"
+					[type]="hide ? 'password' : 'text'" required>
+				<button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
+					[attr.aria-pressed]="hide">
+					<mat-icon>{{ hide ? 'visibility_off' : 'visibility' }}</mat-icon>
+				</button>
+			</mat-form-field>
+		</mat-dialog-content>
 
+		<mat-dialog-actions>
+			<div id="ButtonsWrap">
+				<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
+				<button mat-raised-button color="primary" type="submit" class="primaryButton mx-2">Sign Up</button>
+			</div>
+		</mat-dialog-actions>
+	</form>
 </div>
