fixed minor issue of last commit

--- a/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/userregistration-dialog/userregistration-dialog.component.html
@@ -62,16 +62,8 @@
     <mat-dialog-actions>
       <div style="margin: 0 auto" id="ButtonsWrap">
         <button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-        <button mat-raised-button color="primary" type="submit" class="mx-2">Sign Up</button>
+        <button mat-raised-button type="submit" class="mx-2 primaryButton">Sign Up</button>
       </div>
     </mat-dialog-actions>
   </form>
-
-		<mat-dialog-actions>
-			<div id="ButtonsWrap">
-				<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
-				<button mat-raised-button color="primary" type="submit" class="primaryButton mx-2">Sign Up</button>
-			</div>
-		</mat-dialog-actions>
-	</form>
 </div>
